# whampy

./: .coveragerc  .gitignore  .rtd-environment.yml  .travis.yml  LICENSE.rst  MANIFEST.in  README.rst  setup.cfg  setup.py
.ci/: travis.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml  tests.yml
docs/: click_maps.rst  conf.py  index.rst  installing.rst  intensity_maps.rst  loading_data.rst  moment_maps.rst  spiral_arms.rst  stacking.rst
docs/whampy/: index.rst
paper/: paper.bib  paper.json  paper.md
whampy/: __init__.py  clickMap.py  conftest.py  dataReduction.py  lbvTracks.py  scaleHeight.py  skySurvey.py  spectralStack.py  whampyTableMixin.py
whampy/data/: smc_ha_corrected.sav
whampy/tests/: setup_package.py  test_click_map.py  test_equivalent_width.py  test_fit_scale_height.py  test_get_scale_height_data.py  test_get_spectrum.py  test_intensity_maps.py  test_lbv_tracks.py  test_load_SkySurvey.py  test_moments.py  test_over_data_click_map.py  test_spectral_slab.py  test_spectral_stack.py  test_transmissions.py  test_tuner.py
whampy/tests/test_data/test_dataReduction/ha/: lamp_H-Alpha_45.0_65.2_203312_spec.fts
whampy/tests/test_data/test_dataReduction/ha/combo/: g300_0-000814.fts  g300_0-000859.fts  g300_0-000942.fts  g300_0-005640.fts  g300_0-005830.fts  g300_0-005913.fts  g300_0-021009.fts  g300_0-021111.fts  g300_0-021154.fts  g300_0-033723.fts  g300_0-033806.fts  g300_0-033850.fts  g300_0-034030.fts  g300_0-034114.fts  g300_0-034159.fts  g300_0-065013.fts  g300_0-065224.fts  g300_0-065308.fts
whampy/tests/test_data/test_dataReduction/nii/combo/: g300_0-000127.fts  g300_0-000242.fts  g300_0-000357.fts  g300_0-010335.fts  g300_0-010449.fts  g300_0-010604.fts  g300_0-022553.fts  g300_0-022707.fts  g300_0-022822.fts  g300_0-033035.fts  g300_0-033206.fts  g300_0-033321.fts  g300_0-034705.fts  g300_0-034820.fts  g300_0-034942.fts  g300_0-065737.fts  g300_0-065853.fts  g300_0-070009.fts
