[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = whampy
description = Python Package to Interact with, Visualize, and Analyze the Wisconsin H-Alpha Mapper - Sky Survey
long_description = http://www.astro.wisc.edu/wham
author = DK (Dhanesh Krishnarao)
author_email = krishnarao@astro.wisc.edu
license = BSD 3-Clause
url = https://github.com/Deech08/whampy
edit_on_github = False
github_project = astropy/astropy
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib, cartopy, spectral_cube
install_requires = astropy, numpy, matplotlib, scipy, seaborn
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 1.0.3
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.6

[entry_points]

# astropy-package-template-example = packagename.example_mod:main

